Bug 98807 - GTK3: Activate the navigator doesn't get focus to the navigator window
Summary: GTK3: Activate the navigator doesn't get focus to the navigator window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.1.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: accessibility
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2016-03-21 19:32 UTC by Arnaud Versini
Modified: 2016-10-18 14:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arnaud Versini 2016-03-21 19:32:32 UTC
Steps to reproduce with Gtk3 :
- go to a Writer/Calc/Impress window,
- activate the navigator windows by using F5 (Calc or Writer) or Ctrl+Maj+F5 (Impress),
- the focus is lost somewhere.

Do the same with the GTK VCL plugin :

Steps to reproduce with Gtk3 :
- go to a Writer/Calc/Impress window,
- activate the navigator windows by using F5 (Calc or Writer) or Ctrl+Maj+F5 (Impress),
- the focus is on the Navigator window.

It's a big issue for A11Y.
Comment 1 Commit Notification 2016-10-18 14:41:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c0d6fa1417141a3a7e9deb2f4d50acc28b32f1b4

Resolves: tdf#98807 gtk3 isn't giving utility windows focus

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.