Resolves: tdf#98807 gtk3 isn't giving utility windows focus

so just give up on that and give them a dialog hint instead

Change-Id: Icca0c707dc464b0dbf362988b1dfee56866eadc0